# jobhunt-cli

./: .gitignore  pyproject.toml  requirements.txt
jobhunt/: README.md  cli.py  requirements.txt
jobhunt/core/: aggregator.py  formatter.py  scorer.py
jobhunt/models/: job.py
jobhunt/sources/: base.py  hirist.py  indeed.py  internshala.py  naukri.py
jobhunt/utils/: cache.py  config.py  dedupe.py  digest.py  exporter.py  http.py  skill_extractor.py
