[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunt"
version = "0.1.0"
description = "Aggregate fresher full-stack roles from multiple job platforms"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "tf-playwright-stealth>=1.1",
    "rich>=13",
    "rapidfuzz>=3",
    "tomli-w>=1.0",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobhunt*"]