[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobhunt"
version = "0.1.0"
description = "Aggregate fresher full-stack roles from multiple job platforms"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["jobs", "cli", "scraping", "full-stack", "fresher"]
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "tf-playwright-stealth>=1.1",
    "rich>=13",
    "rapidfuzz>=3",
    "tomli-w>=1.0",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[project.urls]
Homepage = "https://github.com/Dacosmicgiant/jobhunt-cli"
Repository = "https://github.com/Dacosmicgiant/jobhunt-cli"
Issues = "https://github.com/Dacosmicgiant/jobhunt-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobhunt*"]

[tool.setuptools.package-data]
jobhunt = ["py.typed"]